# MyOS

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 3d6d0ce43d93_create_finance_tables.py  47d5d8afa655_add_timezone_to_created_at.py  fdf282031508_create_users_table.py
app/: config.py  database.py  exceptions.py  main.py
app/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
app/finance/: models.py  schemas.py  service.py
